# jam

./: .clang-format  .clangd  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.listener  FEATURE_ROADMAP.md  LISTENER_V3_IMPLEMENTATION_CHECKLIST.md  LISTENER_V3_ROADMAP.md  LOW_LATENCY_ACTION_PLAN.md  LOW_LATENCY_AUDIO_AUDIT.md  LOW_LATENCY_TODO.md  NATIVE_JAM_ENGINE_ROADMAP.md  OPUS_COMPETITIVE_COMPLETION_AUDIT.md  OPUS_COMPETITIVE_IMPLEMENTATION_CHECKLIST.md  OPUS_COMPETITIVE_ROADMAP.md  OPUS_EXTERNAL_VALIDATION_MANIFEST.example.json  OPUS_EXTERNAL_VALIDATION_RUNBOOK.md  PRODUCTION_READINESS_ROADMAP.md  STYLE.md  THIRD_PARTY_NOTICES.md  V1_IMPLEMENTATION_CHECKLIST.md  V1_ROADMAP.md  VPS_BROADCAST_SETUP.md  VPS_SETUP.md  audio_analysis.h  audio_backend.h  audio_backend_policy.h  audio_backend_policy_self_test.cpp  audio_codec.hpp  audio_constants.h  audio_packet.h  audio_packet_self_test.cpp  audio_processor.h  audio_stream.cpp  audio_stream.h  audio_stream.hpp  broadcast_hls.h  broadcast_manager.h  check.hpp  (+74 more)
.github/workflows/: ci.yml  deploy.yml  vps-control.yml
.superpowers/sdd/: phase4-task-7-report.md  phase4-task-8-report.md
archive/md-artifacts/root/: VPS_SETUP.md
broadcast/: mediamtx.yml  nginx.conf
cmake/: client.cmake  common.cmake  listener.cmake  server.cmake
docs/: audio-latency-stability-audit-tracker.md  audio-latency-stability-audit.md
docs/superpowers/plans/: 2026-06-05-juce-audio-backend-migration.md  2026-07-02-phase2-participant-snapshot.md  2026-07-03-phase5-track-b-network.md  2026-07-03-phase5-track-c-operations.md  2026-07-03-phase5-track-d-testing.md  2026-07-03-phase5-track-e-devices.md
docs/superpowers/specs/: 2026-06-05-juce-audio-backend-migration-design.md
html/: index.html
plans/: pcm-cross-platform-clock-sync-patch.md
specs/: native-jam-engine.md  pcm-cross-platform-clock-sync.md
tools/: audio-path-adapt-probe.mjs  audio-path-feedback-smoke.mjs  baseline.mjs  broadcast-v3-local-verify.mjs  build-release-client.mjs  dev-jam.mjs  dev-join-token.mjs  e2e-latency-smoke.mjs  latency-burst-smoke.mjs  listener_service_entrypoint.sh  opus-acceptance.mjs  opus-competitor-evidence-check.mjs  opus-completion-audit.mjs  opus-external-commands.mjs  opus-external-evidence-check.mjs  opus-local-evidence.mjs  opus-local-verify.mjs  opus-log-summary.mjs  opus-source-fingerprint.mjs  opus-validation.mjs  phase5-track-d-common.mjs  phase5-track-d-impairment-matrix.mjs  phase5-track-d-load-benchmark.mjs  phase5-track-d-soak.mjs
validation_logs/phase4-tx-collapse/after/: manifest.txt
validation_logs/phase4-tx-collapse/before/: manifest.txt
validation_logs/phase4-tx-collapse/notify-disabled/: manifest.txt
validation_logs/phase4-tx-collapse/notify-enabled/: manifest.txt
